--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "redux": "^4.2.1"
+    "axios": "^1.6.2",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2"
   }
 }
